less: Fix post menu wrapping

--- a/less/overlays.mix.less
+++ b/less/overlays.mix.less
@@ -45,6 +45,7 @@
 	position: relative;
 	margin-top: 0.1em;
 	z-index: 15;
+	white-space: nowrap;
 	li {
 		list-style: none;
 		margin: 0;
